external/grok/src/lib/jp2/grok.h

typedef enum GRK_SUPPORTED_FILE_FMT
{
	GRK_UNK_FMT,
	GRK_J2K_FMT,
	GRK_JP2_FMT,
	GRK_PXM_FMT,
	GRK_PGX_FMT,
	GRK_PAM_FMT,
	GRK_BMP_FMT,
	GRK_TIF_FMT,
	GRK_RAW_FMT, /* MSB / Big Endian */
	GRK_PNG_FMT,
	GRK_RAWL_FMT, /* LSB / Little Endian */
	GRK_JPG_FMT
} GRK_SUPPORTED_FILE_FMT;
/**
 * Progression order
 * */
typedef enum _GRK_PROG_ORDER
{
	GRK_PROG_UNKNOWN = -1, /**< place-holder */
	GRK_LRCP = 0, /**< layer-resolution-component-precinct order */
	GRK_RLCP = 1, /**< resolution-layer-component-precinct order */
	GRK_RPCL = 2, /**< resolution-precinct-component-layer order */
	GRK_PCRL = 3, /**< precinct-component-resolution-layer order */
	GRK_CPRL = 4, /**< component-precinct-resolution-layer order */
	GRK_NUM_PROGRESSION_ORDERS = 5 /** number of possible progression orders */
} GRK_PROG_ORDER;
/**
 * Supported image color spaces
 * */
typedef enum _GRK_COLOR_SPACE
{
	GRK_CLRSPC_UNKNOWN = 0, /**< unknown */
	GRK_CLRSPC_SRGB = 2, /**< sRGB */
	GRK_CLRSPC_GRAY = 3, /**< grayscale */
	GRK_CLRSPC_SYCC = 4, /**< standard YCC (YUV) */
	GRK_CLRSPC_EYCC = 5, /**< extended YCC */
	GRK_CLRSPC_CMYK = 6, /**< CMYK */
	GRK_CLRSPC_DEFAULT_CIE = 7, /**< default CIE LAB */
	GRK_CLRSPC_CUSTOM_CIE = 8, /**< custom CIE LAB */
	GRK_CLRSPC_ICC = 9 /**< ICC profile */
} GRK_COLOR_SPACE;
/**
 * Supported codecs
 */
typedef enum _GRK_CODEC_FORMAT
{
	GRK_CODEC_UNKNOWN = -1, /**< place-holder */
	GRK_CODEC_J2K = 0, /**< JPEG 2000 code stream : read/write */
	GRK_CODEC_JP2 = 2 /**< JP2 file format : read/write */
} GRK_CODEC_FORMAT;
typedef enum GRK_TILE_CACHE_STRATEGY
{
	GRK_TILE_CACHE_NONE,
	GRK_TILE_CACHE_ALL,
} GRK_TILE_CACHE_STRATEGY;
/**
 * Callback function prototype for logging
 *
 * @param msg               Event message
 * @param client_data       Client object where will be return the event message
 * */
typedef void (*grk_msg_callback)(const char* msg, void* client_data);
/**
 *
 * Base Grok ref-counted object
 *
 */
typedef struct _grk_object
{
	void* wrapper;
} grk_object;
/**
 * Progression order change
 *
 */
typedef struct _grk_progression
{
	/** progression order bounds specified by POC */
	uint16_t layS;
	uint16_t layE;
	uint8_t resS;
	uint8_t resE;
	uint16_t compS;
	uint16_t compE;
	uint64_t precS;
	uint64_t precE;

	/** Progression order enum*/
	GRK_PROG_ORDER specifiedCompressionPocProg;
	GRK_PROG_ORDER progression;
	/** Progression order string*/
	char progressionString[5];
	/** Tile number */
	uint32_t tileno;
	/** Start and end values for tile width and height*/
	uint32_t tx0;
	uint32_t tx1;
	uint32_t ty0;
	uint32_t ty1;
	/** progression order bounds initialized in pi_create_compress*/
	uint16_t tpLayE;
	uint8_t tpResS;
	uint8_t tpResE;
	uint16_t tpCompS;
	uint16_t tpCompE;
	uint64_t tpPrecE;
	/** tile bounds initialized by pi_create_compress*/
	uint32_t tp_txS;
	uint32_t tp_txE;
	uint32_t tp_tyS;
	uint32_t tp_tyE;
	uint32_t dx;
	uint32_t dy;
	/** tile part temporary values initialized by pi_create_encode */
	uint16_t lay_temp;
	uint8_t res_temp;
	uint16_t comp_temp;
	uint64_t prec_temp;
	uint32_t tx0_temp;
	uint32_t ty0_temp;
} grk_progression;
/**@name RAW component compress parameters */
/*@{*/
typedef struct _grk_raw_comp_cparameters
{
	uint32_t dx; /** subsampling in X direction */
	uint32_t dy; /** subsampling in Y direction */
	/*@}*/
} grk_raw_comp_cparameters;
/**@name RAW image compress parameters */
/*@{*/
typedef struct _grk_raw_cparameters
{
	uint32_t width; /** width of the raw image */
	uint32_t height; /** height of the raw image */
	uint16_t numcomps; /** number of components of the raw image */
	uint8_t prec; /** bit depth of the raw image */
	bool sgnd; /** signed/unsigned raw image */
	grk_raw_comp_cparameters* comps; /** raw components parameters */
	/*@}*/
} grk_raw_cparameters;
/**
 * Compress parameters
 * */
typedef struct _grk_cparameters
{
	/** size of tile: tile_size_on = false (not in argument) or = true (in argument) */
	bool tile_size_on;
	/** XTOsiz */
	uint32_t tx0;
	/** YTOsiz */
	uint32_t ty0;
	/** XTsiz */
	uint32_t t_width;
	/** YTsiz */
	uint32_t t_height;
	/** number of layers */
	uint16_t numlayers;
	/** rate control allocation by rate/distortion curve */
	bool allocationByRateDistoration;
	/** layers rates expressed as compression ratios.
	 *  They might be subsequently limited by the max_cs_size field */
	double layer_rate[GRK_MAX_LAYERS];
	/** rate control allocation by fixed_PSNR quality */
	bool allocationByQuality;
	/** layer PSNR values */
	double layer_distortion[GRK_MAX_LAYERS];
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool is_binary_comment[GRK_NUM_COMMENTS_SUPPORTED];
	size_t num_comments;
	/** csty : coding style */
	uint8_t csty;
	/* number of guard bits */
	uint8_t numgbits;
	/** progression order (default is LRCP) */
	GRK_PROG_ORDER prog_order;
	/** progressions */
	grk_progression progression[GRK_J2K_MAXRLVLS];
	/** number of progression order changes (POCs), default to 0 */
	uint32_t numpocs;
	/** number of resolutions */
	uint8_t numresolution;
	/** initial code block width  (default to 64) */
	uint32_t cblockw_init;
	/** initial code block height (default to 64) */
	uint32_t cblockh_init;
	/** code block style */
	uint8_t cblk_sty;
	/* flag for high throughput */
	bool isHT;
	/** 1 : use the irreversible DWT 9-7, 0 :
	 *  use lossless compression (default) */
	bool irreversible;
	/** region of interest: affected component in [0..3];
	 *  -1 indicates no ROI */
	int32_t roi_compno;
	/** region of interest: upshift value */
	uint32_t roi_shift;
	/* number of precinct size specifications */
	uint32_t res_spec;
	/** initial precinct width */
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	/** initial precinct height */
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	/** input file name */
	char infile[GRK_PATH_LEN];
	/** output file name */
	char outfile[GRK_PATH_LEN];
	/** subimage compressing: origin image offset in x direction */
	uint32_t image_offset_x0;
	/** subimage compressing: origin image offset in y direction */
	uint32_t image_offset_y0;
	/** subsampling value for dx */
	uint32_t subsampling_dx;
	/** subsampling value for dy */
	uint32_t subsampling_dy;
	/** input file format*/
	GRK_SUPPORTED_FILE_FMT decod_format;
	/** output file format*/
	GRK_SUPPORTED_FILE_FMT cod_format;
	grk_raw_cparameters raw_cp;
	/**
	 * Maximum size (in bytes) for each component.
	 * If == 0, component size limitation is not considered
	 * */
	uint32_t max_comp_size;
	/** Tile part generation*/
	bool enableTilePartGeneration;
	/** new tile part progression divider */
	uint8_t newTilePartProgressionDivider;
	/** MCT (multiple component transform) */
	uint8_t mct;
	/** Naive implementation of MCT restricted to a single reversible array based
	 compressing without offset concerning all the components. */
	void* mct_data;
	/**
	 * Maximum size (in bytes) for the whole code stream.
	 * If equal to zero, code stream size limitation is not considered
	 * If it does not comply with layer_rate, max_cs_size prevails
	 * and a warning is issued.
	 * */
	uint64_t max_cs_size;
	/** RSIZ value
	 To be used to combine GRK_PROFILE_*, GRK_EXTENSION_* and (sub)levels values. */
	uint16_t rsiz;
	uint16_t framerate;

	// set to true if input file stores capture resolution
	bool write_capture_resolution_from_file;
	double capture_resolution_from_file[2];

	bool write_capture_resolution;
	double capture_resolution[2];

	bool write_display_resolution;
	double display_resolution[2];

	// 0: bisect with all truncation points,  1: bisect with only feasible truncation points
	uint32_t rateControlAlgorithm;
	uint32_t numThreads;
	int32_t deviceId;
	uint32_t duration; // seconds
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	bool writePLT;
	bool writeTLM;
	bool verbose;
} grk_cparameters;
/**
 Channel definition: channel index, type, association
 */
typedef struct _grk_channel_description
{
	uint16_t cn;
	uint16_t typ;
	uint16_t asoc;
} grk_channel_description;
/**
 Channel definitions and number of definitions
 */
typedef struct _grk_channel_definition
{
	grk_channel_description* descriptions;
	uint16_t num_channel_descriptions;
} grk_channel_definition;
/**
 Component mappings: component index, mapping type, palette column
 */
typedef struct _grk_component_mapping_comp
{
	uint16_t component_index;
	uint8_t mapping_type;
	uint8_t palette_column;
} grk_component_mapping_comp;
/**
 Palette data
 */
typedef struct _grk_palette_data
{
	int32_t* lut;
	uint16_t num_entries;
	grk_component_mapping_comp* component_mapping;
	uint8_t num_channels;
	bool* channel_sign;
	uint8_t* channel_prec;
} grk_palette_data;