src/lib.rs

/* automatically generated by rust-bindgen 0.59.1 */

use libc::FILE as FILE;

pub type __darwin_size_t = ::std::os::raw::c_ulong;
pub const GRK_UNK_FMT: GRK_SUPPORTED_FILE_FMT = 0;
pub const GRK_J2K_FMT: GRK_SUPPORTED_FILE_FMT = 1;
pub const GRK_JP2_FMT: GRK_SUPPORTED_FILE_FMT = 2;
pub const GRK_PXM_FMT: GRK_SUPPORTED_FILE_FMT = 3;
pub const GRK_PGX_FMT: GRK_SUPPORTED_FILE_FMT = 4;
pub const GRK_PAM_FMT: GRK_SUPPORTED_FILE_FMT = 5;
pub const GRK_BMP_FMT: GRK_SUPPORTED_FILE_FMT = 6;
pub const GRK_TIF_FMT: GRK_SUPPORTED_FILE_FMT = 7;
pub const GRK_RAW_FMT: GRK_SUPPORTED_FILE_FMT = 8;
pub const GRK_PNG_FMT: GRK_SUPPORTED_FILE_FMT = 9;
pub const GRK_RAWL_FMT: GRK_SUPPORTED_FILE_FMT = 10;
pub const GRK_JPG_FMT: GRK_SUPPORTED_FILE_FMT = 11;
pub type GRK_SUPPORTED_FILE_FMT = ::std::os::raw::c_uint;
#[doc = "< place-holder"]
pub const GRK_PROG_UNKNOWN: _GRK_PROG_ORDER = -1;
#[doc = "< layer-resolution-component-precinct order"]
pub const GRK_LRCP: _GRK_PROG_ORDER = 0;
#[doc = "< resolution-layer-component-precinct order"]
pub const GRK_RLCP: _GRK_PROG_ORDER = 1;
#[doc = "< resolution-precinct-component-layer order"]
pub const GRK_RPCL: _GRK_PROG_ORDER = 2;
#[doc = "< precinct-component-resolution-layer order"]
pub const GRK_PCRL: _GRK_PROG_ORDER = 3;
#[doc = "< component-precinct-resolution-layer order"]
pub const GRK_CPRL: _GRK_PROG_ORDER = 4;
pub const GRK_NUM_PROGRESSION_ORDERS: _GRK_PROG_ORDER = 5;
#[doc = " Progression order"]
pub type _GRK_PROG_ORDER = ::std::os::raw::c_int;
#[doc = " Progression order"]
pub use self::_GRK_PROG_ORDER as GRK_PROG_ORDER;
#[doc = "< unknown"]
pub const GRK_CLRSPC_UNKNOWN: _GRK_COLOR_SPACE = 0;
#[doc = "< sRGB"]
pub const GRK_CLRSPC_SRGB: _GRK_COLOR_SPACE = 2;
#[doc = "< grayscale"]
pub const GRK_CLRSPC_GRAY: _GRK_COLOR_SPACE = 3;
#[doc = "< standard YCC (YUV)"]
pub const GRK_CLRSPC_SYCC: _GRK_COLOR_SPACE = 4;
#[doc = "< extended YCC"]
pub const GRK_CLRSPC_EYCC: _GRK_COLOR_SPACE = 5;
#[doc = "< CMYK"]
pub const GRK_CLRSPC_CMYK: _GRK_COLOR_SPACE = 6;
#[doc = "< default CIE LAB"]
pub const GRK_CLRSPC_DEFAULT_CIE: _GRK_COLOR_SPACE = 7;
#[doc = "< custom CIE LAB"]
pub const GRK_CLRSPC_CUSTOM_CIE: _GRK_COLOR_SPACE = 8;
#[doc = "< ICC profile"]
pub const GRK_CLRSPC_ICC: _GRK_COLOR_SPACE = 9;
#[doc = " Supported image color spaces"]
pub type _GRK_COLOR_SPACE = ::std::os::raw::c_uint;
#[doc = " Supported image color spaces"]
pub use self::_GRK_COLOR_SPACE as GRK_COLOR_SPACE;
#[doc = "< place-holder"]
pub const GRK_CODEC_UNKNOWN: _GRK_CODEC_FORMAT = -1;
#[doc = "< JPEG 2000 code stream : read/write"]
pub const GRK_CODEC_J2K: _GRK_CODEC_FORMAT = 0;
#[doc = "< JP2 file format : read/write"]
pub const GRK_CODEC_JP2: _GRK_CODEC_FORMAT = 2;
#[doc = " Supported codecs"]
pub type _GRK_CODEC_FORMAT = ::std::os::raw::c_int;
#[doc = " Supported codecs"]
pub use self::_GRK_CODEC_FORMAT as GRK_CODEC_FORMAT;
pub const GRK_TILE_CACHE_NONE: GRK_TILE_CACHE_STRATEGY = 0;
pub const GRK_TILE_CACHE_ALL: GRK_TILE_CACHE_STRATEGY = 1;
pub type GRK_TILE_CACHE_STRATEGY = ::std::os::raw::c_uint;
#[doc = " Callback function prototype for logging"]
#[doc = ""]
#[doc = " @param msg               Event message"]
#[doc = " @param client_data       Client object where will be return the event message"]
pub type grk_msg_callback = ::std::option::Option<
    unsafe extern "C" fn(
        msg: *const ::std::os::raw::c_char,
        client_data: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Base Grok ref-counted object"]
#[doc = ""]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_object {
    pub wrapper: *mut ::std::os::raw::c_void,
}
#[doc = " Base Grok ref-counted object"]
#[doc = ""]
pub type grk_object = _grk_object;
#[doc = " Progression order change"]
#[doc = ""]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_progression {
    #[doc = " progression order bounds specified by POC"]
    pub layS: u16,
    pub layE: u16,
    pub resS: u8,
    pub resE: u8,
    pub compS: u16,
    pub compE: u16,
    pub precS: u64,
    pub precE: u64,
    #[doc = " Progression order enum"]
    pub specifiedCompressionPocProg: GRK_PROG_ORDER,
    pub progression: GRK_PROG_ORDER,
    #[doc = " Progression order string"]
    pub progressionString: [::std::os::raw::c_char; 5usize],
    #[doc = " Tile number"]
    pub tileno: u32,
    #[doc = " Start and end values for tile width and height"]
    pub tx0: u32,
    pub tx1: u32,
    pub ty0: u32,
    pub ty1: u32,
    #[doc = " progression order bounds initialized in pi_create_compress"]
    pub tpLayE: u16,
    pub tpResS: u8,
    pub tpResE: u8,
    pub tpCompS: u16,
    pub tpCompE: u16,
    pub tpPrecE: u64,
    #[doc = " tile bounds initialized by pi_create_compress"]
    pub tp_txS: u32,
    pub tp_txE: u32,
    pub tp_tyS: u32,
    pub tp_tyE: u32,
    pub dx: u32,
    pub dy: u32,
    #[doc = " tile part temporary values initialized by pi_create_encode"]
    pub lay_temp: u16,
    pub res_temp: u8,
    pub comp_temp: u16,
    pub prec_temp: u64,
    pub tx0_temp: u32,
    pub ty0_temp: u32,
}
#[doc = " Progression order change"]
#[doc = ""]
pub type grk_progression = _grk_progression;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_raw_comp_cparameters {
    pub dx: u32,
    #[doc = " subsampling in X direction"]
    pub dy: u32,
}
pub type grk_raw_comp_cparameters = _grk_raw_comp_cparameters;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_raw_cparameters {
    pub width: u32,
    #[doc = " width of the raw image"]
    pub height: u32,
    #[doc = " height of the raw image"]
    pub numcomps: u16,
    #[doc = " number of components of the raw image"]
    pub prec: u8,
    #[doc = " bit depth of the raw image"]
    pub sgnd: bool,
    #[doc = " signed/unsigned raw image"]
    pub comps: *mut grk_raw_comp_cparameters,
}
pub type grk_raw_cparameters = _grk_raw_cparameters;
#[doc = " Compress parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_cparameters {
    #[doc = " size of tile: tile_size_on = false (not in argument) or = true (in argument)"]
    pub tile_size_on: bool,
    #[doc = " XTOsiz"]
    pub tx0: u32,
    #[doc = " YTOsiz"]
    pub ty0: u32,
    #[doc = " XTsiz"]
    pub t_width: u32,
    #[doc = " YTsiz"]
    pub t_height: u32,
    #[doc = " number of layers"]
    pub numlayers: u16,
    #[doc = " rate control allocation by rate/distortion curve"]
    pub allocationByRateDistoration: bool,
    #[doc = " layers rates expressed as compression ratios."]
    #[doc = "  They might be subsequently limited by the max_cs_size field"]
    pub layer_rate: [f64; 100usize],
    #[doc = " rate control allocation by fixed_PSNR quality"]
    pub allocationByQuality: bool,
    #[doc = " layer PSNR values"]
    pub layer_distortion: [f64; 100usize],
    pub comment: [*mut ::std::os::raw::c_char; 256usize],
    pub comment_len: [u16; 256usize],
    pub is_binary_comment: [bool; 256usize],
    pub num_comments: usize,
    #[doc = " csty : coding style"]
    pub csty: u8,
    pub numgbits: u8,
    #[doc = " progression order (default is LRCP)"]
    pub prog_order: GRK_PROG_ORDER,
    #[doc = " progressions"]
    pub progression: [grk_progression; 33usize],
    #[doc = " number of progression order changes (POCs), default to 0"]
    pub numpocs: u32,
    #[doc = " number of resolutions"]
    pub numresolution: u8,
    #[doc = " initial code block width  (default to 64)"]
    pub cblockw_init: u32,
    #[doc = " initial code block height (default to 64)"]
    pub cblockh_init: u32,
    #[doc = " code block style"]
    pub cblk_sty: u8,
    pub isHT: bool,
    #[doc = " 1 : use the irreversible DWT 9-7, 0 :"]
    #[doc = "  use lossless compression (default)"]
    pub irreversible: bool,
    #[doc = " region of interest: affected component in [0..3];"]
    #[doc = "  -1 indicates no ROI"]
    pub roi_compno: i32,
    #[doc = " region of interest: upshift value"]
    pub roi_shift: u32,
    pub res_spec: u32,
    #[doc = " initial precinct width"]
    pub prcw_init: [u32; 33usize],
    #[doc = " initial precinct height"]
    pub prch_init: [u32; 33usize],
    #[doc = " input file name"]
    pub infile: [::std::os::raw::c_char; 4096usize],
    #[doc = " output file name"]
    pub outfile: [::std::os::raw::c_char; 4096usize],
    #[doc = " subimage compressing: origin image offset in x direction"]
    pub image_offset_x0: u32,
    #[doc = " subimage compressing: origin image offset in y direction"]
    pub image_offset_y0: u32,
    #[doc = " subsampling value for dx"]
    pub subsampling_dx: u32,
    #[doc = " subsampling value for dy"]
    pub subsampling_dy: u32,
    #[doc = " input file format"]
    pub decod_format: GRK_SUPPORTED_FILE_FMT,
    #[doc = " output file format"]
    pub cod_format: GRK_SUPPORTED_FILE_FMT,
    pub raw_cp: grk_raw_cparameters,
    #[doc = " Maximum size (in bytes) for each component."]
    #[doc = " If == 0, component size limitation is not considered"]
    pub max_comp_size: u32,
    #[doc = " Tile part generation"]
    pub enableTilePartGeneration: bool,
    #[doc = " new tile part progression divider"]
    pub newTilePartProgressionDivider: u8,
    #[doc = " MCT (multiple component transform)"]
    pub mct: u8,
    #[doc = " Naive implementation of MCT restricted to a single reversible array based"]
    #[doc = "compressing without offset concerning all the components."]
    pub mct_data: *mut ::std::os::raw::c_void,
    #[doc = " Maximum size (in bytes) for the whole code stream."]
    #[doc = " If equal to zero, code stream size limitation is not considered"]
    #[doc = " If it does not comply with layer_rate, max_cs_size prevails"]
    #[doc = " and a warning is issued."]
    pub max_cs_size: u64,
    #[doc = " RSIZ value"]
    #[doc = "To be used to combine GRK_PROFILE_*, GRK_EXTENSION_* and (sub)levels values."]
    pub rsiz: u16,
    pub framerate: u16,
    pub write_capture_resolution_from_file: bool,
    pub capture_resolution_from_file: [f64; 2usize],
    pub write_capture_resolution: bool,
    pub capture_resolution: [f64; 2usize],
    pub write_display_resolution: bool,
    pub display_resolution: [f64; 2usize],
    pub rateControlAlgorithm: u32,
    pub numThreads: u32,
    pub deviceId: i32,
    pub duration: u32,
    pub kernelBuildOptions: u32,
    pub repeats: u32,
    pub writePLT: bool,
    pub writeTLM: bool,
    pub verbose: bool,
}
#[doc = " Compress parameters"]
pub type grk_cparameters = _grk_cparameters;
#[doc = "Channel definition: channel index, type, association"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_channel_description {
    pub cn: u16,
    pub typ: u16,
    pub asoc: u16,
}
#[doc = "Channel definition: channel index, type, association"]
pub type grk_channel_description = _grk_channel_description;
#[doc = "Channel definitions and number of definitions"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_channel_definition {
    pub descriptions: *mut grk_channel_description,
    pub num_channel_descriptions: u16,
}
#[doc = "Channel definitions and number of definitions"]
pub type grk_channel_definition = _grk_channel_definition;
#[doc = "Component mappings: component index, mapping type, palette column"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_component_mapping_comp {
    pub component_index: u16,
    pub mapping_type: u8,
    pub palette_column: u8,
}
#[doc = "Component mappings: component index, mapping type, palette column"]
pub type grk_component_mapping_comp = _grk_component_mapping_comp;
#[doc = "Palette data"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _grk_palette_data {
    pub lut: *mut i32,
    pub num_entries: u16,
    pub component_mapping: *mut grk_component_mapping_comp,
    pub num_channels: u8,
    pub channel_sign: *mut bool,
    pub channel_prec: *mut u8,
}
